Fixed a typo that caused the plugin not to work on 1.17